# energy_efficiency_predictor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  data.dvc  pyproject.toml
.dvc/: config
.github/workflows/: engineering.yml  loading.yml  projects_distros.yml
notebooks/: final_predictor.joblib  main.ipynb  main_copy.ipynb
src/loaders/: data_loader.py
src/models/linear_models/: elasticnet_pca_regressor.py  pca_regression.py  pca_regressor.py  ridge_pca_regression.py
src/models/non_linear_models/: btree_regressor.py  decision_tree_regressor.py
src/transformers/: data_transformer.py
src/utils/: boxplots_plotter.py
tests/loaders/: test_data_loader.py
tests/loaders/fixtures/: fixtures.py
tests/transformers/: test_data_transformer.py
tests/transformers/fixtures/: fixtures.py
