[tool.poetry]
name = "energy-efficiency-predictor"
version = "0.1.1"
description = "A machine learning project focused on prediction heating & cooling loads of buildings simulated by Ecotect."
authors = ["Prince Foli Acouetey"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.6.0"
ucimlrepo = "^0.0.7"
pytest = "^8.3.4"
mlflow = "^2.19.0"
hyperopt = "^0.2.7"
dvc = "^3.58.0"
dvc-s3 = "^3.2.0"
pytest-cov = "^6.0.0"


[tool.poetry.group.dev.dependencies]
python-semantic-release = "^9.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]
branch = "main"
changelog_file = "CHANGELOG.md"